NCLua NEWS -- History of user-visible changes.                 -*-outline-*-

* Version 1.4, ???

  - Add the canvas._resize function.

    We added a new internal function, canvas._resize, which resizes the
    surface of a given canvas.

  - Add the canvas.attrFilter function.

    We added a new function, canvas.attrFilter, which selects the algorithm
    used when reading pixels from a source surface.

  - Fix bug in canvas.compose when custom crop parameters were given.

    Scale the source pattern and not the destination cairo context.

  - Make canvas.compose support the composition of a canvas onto itself.

    Now a canvas can be composed onto itself.

  - Add command-line options to NCLua interpreter.

    The interpreter now supports --help, --version, and --size options.

* Version 1.3, February 22, 2015, Guilherme F. Lima

  - Add the HTTP event class and networking examples.

    We added a new event class, called http, for HTTP/HTTPS requests
    (cf. nclua/event/http.lua); this new class depends on Libsoup-2.4.

    We also added two examples of networking and two auxiliary libraries
    under examples/www.  The first example, examples/www/tcp-example.lua,
    makes a simple HTTP request and prints the response body on screen.
    This example uses a blocking TCP library, examples/www/tcp.lua, which is
    implemented on top of the TCP event class.  The second example,
    example/www/http-example.lua, makes some HTTP and HTTPS requests and
    prints the corresponding response headers and bodies on screen.
    Similarly, this example uses a blocking HTTP library,
    examples/www/http.lua, which is implemented on top of the HTTP event
    class.

  - Add support to pointer event class to the nclua binary.

    The nclua binary now generates pointer events, cf. examples/follow.lua.

  - Make GTK+3.0, GIO-2.0, and Libsoup-2.4 optional.

    GTK+3.0 is required by the NCLua binary, GIO-2.0 is required by the TCP